...first final draft?

--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -181,6 +181,8 @@ Set  $P_{\mathrm{hit}} = \{ s_i | \{s_i \in P_{\mathrm{hit}}\} \cap \{ i > |P_{\
 \label{sec:recognition_analysis}
 Our algorithm allows a spectating agent to generate a segmented timeline of actions from those partially trained within its internal repository. The agent is then able to fully capitalize on these examplars within its existing hierarchical framework by identifying possible expert examples to process as training data. The algorithm leverages particularly strong demonstrations to propagate what is perceived as the most beneficial reward signals while processing the identification step, contributing towards converging on an optimal execution policy. This synthesis of action recognition and inverse reinforcement learning does not demand any additional resources or training beyond what is required for basic primitive execution proficiency.
 
+We introduce the concept of probabilistically ''waypointing'' states along observed paths to generate a hybrid policy allowing for increased noise and error tolerance. Waypointed states have temporary, artificially high incoming transition rewards, biasing exploration functions to choose traversals incorporating them. We combine the use of waypointed states with greedy, non-explorative policies to create an \textit{optimistic} assessment of how a particular observed MDP traversal can be combined with what is already known about a particular skill. This step is especially important when considering the consequences of implicitly attemping to declare which skill is being demonstrated, as the learner must be able to check if the observed decision sequence is at all relatable to its internal model of each primitive's policy. In lieu of waypointing, the confidence value is calculated by increasing $\alpha_1$ and $\alpha_4$ while decreasing $\alpha_2$ and $\alpha_3$ to zero. Additionally, algorithm steps 6a and 6b are not executed, as these constitute the waypoint-path generation process.
+
 As with many parameterized learning methods, choosing proper values depends on a multitude of factors including, but not limited to, sensor sensitivity, agent precision of action, overlapping primitive action state density, available computational power, and memory constraints. While there is much room for optimization within the algorithm specified, we believe it serves well as a simple, straightforward proof-of-concept for partnering a generalized action recognition system with a skill representation that is a dominant standard in human-robot interaction research.
 
 One of the most troublesome concerns within any system dealing with high dimensional MDPs is maintaining sparsity of space representation. As the initialized state space increases, the process of intelligently connecting previously unseen states becomes computationally infeasible while simultaneously maintaining the responsiveness required for real-world systems. Within the context of our algorithm, it is suggested that a garbage collection mechanism be implemented that prunes low-reward states, prioritizing the removal of those with high connectivity. 
@@ -232,7 +234,6 @@ As expected, our algorithm performed without error when tested on its training d
 
 The complex scenario shown in figure \ref{fig:output_nowaypoints_repeatedtrials} and figure \ref{fig:output_waypoints_repeatedtrials} included the placement of some of the most similar gestures in close temporal proximity. We introduced additional noisy data, composited randomly from familiar states in each of the seven gestures' training data, to demonstrate our algorithm's ability to discern when there is an unrecognized action taking place. The introduction of waypointing, shown in figure \ref{fig:output_waypoints_repeatedtrials}, boosted overall confidence values for correct classifications and smoothed the transitions between non-confident and confident classifications. One particular example of this can be seen near frame 410, as without waypointing the gesture for 'school' is confused with the end of the 'shoes' gesture preceeding it. 
 
-
 The lack of classification of the final 'shoes' gesture is explained by the step in which after a high confidence classification is made, the window through which the algorithm searches for effective state space traversals, $P_{\mathrm{hit}}$, is cut in half to prevent harmful self-reinforcement looping.
 
 The successful application of our algorithm to this representative example of non-trivial action classification serves as a proof-of-concept that can be applied to benefit any generic hierarchical learning framework.
@@ -258,7 +259,7 @@ Furthermore, it would be greatly advantageous to study a deployed system with ou
 
 \section{Conclusions}
 \label{sec:conclusions}
-We have presented herein a method for action recognition that simultaneously leverages an existing representation of primitive skills and improves the accuracy with which those skills can be performed by the observer.  This real-time recognition of learned actions is essential for any co-robot to be able to cooperate effectively in a multi-human multi-robot environment.  
+We have presented herein a method for action recognition that simultaneously leverages an existing representation of primitive skills and improves the accuracy with which those skills can be performed by the observer.  These skills are modeled as traditional SMDPs, an existing standard for skill representation in reinforcement learning.  This real-time recognition of learned actions is essential for any co-robot to be able to cooperate effectively in a multi-human multi-robot environment.  In addition, the generalized recognition algorithm greatly facilitates the construction of a skill hierarchy that can represent a complex cooperative task structure.  Utilizing the generated skill hierarchy, a robotic agent can simultaneously execute desired tasks and increase its  cooperative potential by recognizing known primitive actions being performed by co-workers.
 
 Our system can be easily qualified as an extension to what Ng and Abeel \shortcite{OriginalInverseRL} originally termed ``inverse reinforcement learning''.  By opportunistically incorporating observed data as propagated rewards to the SMDP skill representation, our system converges on a stable learned primitive with fewer explicit trials.  Furthermore, the bonus rewards assigned to those observations that achieve high confidence, in concert with waypointing, allow us to use specific portions of noisy, lossy, and otherwise unreliable observed data as expert training.
 
