--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -195,9 +195,9 @@ Set  $P_{\mathrm{hit}} = \{ s_i | \{s_i \in P_{\mathrm{hit}}\} \cap \{ i > |P_{\
 
 \subsection{Details and Analysis}
 \label{sec:recognition_analysis}
-Our algorithm allows a spectating agent to generate a segmented timeline of actions from those partially trained within its internal repository. The agent is then able to fully capitalize on these examplars within its existing hierarchical framework by identifying possible expert examples to process as training data. The algorithm leverages particularly strong demonstrations to propagate what is perceived as the most beneficial reward signals while processing the identification step, contributing towards converging on an optimal execution policy. This synthesis of action recognition and inverse reinforcement learning does not demand any additional resources or training beyond what is required for basic primitive execution proficiency.
+Our algorithm allows a spectating agent to generate a segmented timeline of actions from those partially trained within its internal repository. The agent is then able to fully capitalize on these exemplars within its existing hierarchical framework by identifying possible expert examples to process as training data. The algorithm leverages particularly strong demonstrations to propagate what is perceived as the most beneficial reward signals while processing the identification step, contributing towards converging on an optimal execution policy. This synthesis of action recognition and inverse reinforcement learning does not demand any additional resources or training beyond what is required for basic primitive execution proficiency.
 
-We introduce the concept of probabilistically ''waypointing'' states along observed paths to generate a hybrid policy allowing for increased noise and error tolerance. Waypointed states have temporary, artificially high incoming transition rewards, biasing exploration functions to choose traversals incorporating them. We combine the use of waypointed states with greedy, non-explorative policies to create an \textit{optimistic} assessment of how a particular observed MDP traversal can be combined with what is already known about a particular skill. This step is especially important when considering the consequences of implicitly attemping to declare which skill is being demonstrated, as the learner must be able to check if the observed decision sequence is at all relatable to its internal model of each primitive's policy. In lieu of waypointing, the confidence value is calculated by increasing $\alpha_1$ and $\alpha_4$ while decreasing $\alpha_2$ and $\alpha_3$ to zero. Additionally, algorithm steps \ref{eq_wp_1} and \ref{eq_wp_2} are not executed, as these constitute the waypoint-path generation process.
+We introduce the concept of probabilistically ''waypointing'' states along observed paths to generate a hybrid policy allowing for increased noise and error tolerance. Waypointed states have temporary, artificially high incoming transition rewards, biasing exploration functions to choose traversals incorporating them. We combine the use of waypointed states with greedy, non-exploratory policies to create an \textit{optimistic} assessment of how a particular observed MDP traversal can be combined with what is already known about a particular skill. This step is especially important when considering the consequences of implicitly attempting to declare which skill is being demonstrated, as the learner must be able to check if the observed decision sequence is at all relatable to its internal model of each primitive's policy. In lieu of waypointing, the confidence value is calculated by increasing $\alpha_1$ and $\alpha_4$ while decreasing $\alpha_2$ and $\alpha_3$ to zero. Additionally, algorithm steps \ref{eq_wp_1} and \ref{eq_wp_2} are not executed, as these constitute the waypoint generation process.
 
 As with many parameterized learning methods, choosing proper values depends on a multitude of factors including, but not limited to, sensor sensitivity, agent precision of action, overlapping primitive action state density, available computational power, and memory constraints. While there is much room for optimization within the algorithm specified, we believe it serves well as a simple, straightforward proof-of-concept for partnering a generalized action recognition system with a skill representation that is a dominant standard in human-robot interaction research.
 
@@ -211,19 +211,25 @@ As with many parameterized learning methods, choosing proper values depends on a
 
 One of the most troublesome concerns within any system dealing with high dimensional MDPs is maintaining sparsity of space representation. As the initialized state space increases, the process of intelligently connecting previously unseen states becomes computationally infeasible while simultaneously maintaining the responsiveness required for real-world systems. Within the context of our algorithm, it is suggested that a garbage collection mechanism be implemented that prunes low-reward states, prioritizing the removal of those with high connectivity. 
 
-As one of our goals is to use observation to optimize the inverse problem of execution, removing entrances to bad paths as a pre-processing step can dramatically reduce an agent's search space. Knox, et. al.'s TAMER framework has begun to address this problem by using a human in the loop as an intelligent reinforcement signal \cite{TAMER}. Since the intention of an observer is not as easily discernable as that of an actor, such direct human-as-reward-signal methods are not as accessible without the introduction of an interface providing insight into the structure of each skill's internal representation as SMDP.
+As one of our goals is to use observation to optimize the inverse problem of execution, removing entrances to bad paths as a pre-processing step can dramatically reduce an agent's search space. Knox, et. al.'s TAMER framework has begun to address this problem by using a human in the loop as an intelligent reinforcement signal \cite{TAMER}. Since the intention of an observer is not as easily discernible as that of an actor, such direct human-as-reward-signal methods are not as accessible without the introduction of an interface providing insight into the structure of each skill's internal representation as SMDP.
 
 \section{Experimental Setup}
 \label{sec:experiment}
-We chose to test our system on properly identifying and segmenting video of American Sign Language (ASL) gestures. American Sign Language provides a practical use case while testing the algorithm's tolerance to variance in training, as each training example will necessarily be unique. Our state space encompasses six dimensions, corresponding to the relative x, y, and z coordinates of each hand involved.  Our system has limited \textit{a priori} knowledge of a partially overlapping set of ASL gestures, having been given a single exemplar of training data for each known gesture.
-
-The observation data is gathered using a commercially-available Kinect sensor made by Microsoft.  The Kinect sensor is paired with a computer running Microsoft Windows, which serializes the relevant skeletal data provided by the Kinect Research API and transmits it via UDP to the recognition system.
+We chose to test our system on properly identifying and segmenting video of American Sign Language (ASL) gestures. American Sign Language provides a practical use case while testing the algorithm's tolerance to variance in training, as each training example will necessarily be unique. Our state space encompasses six dimensions, corresponding to the relative x, y, and z coordinates of each hand involved.  Our system has limited \textit{a priori} knowledge of a partially overlapping set of ASL gestures, having been given a single exemplar of training data for each known gesture. We gathered our data using a commercially-available Microsoft Kinect sensor. 
 
 % BRAD: Thad moved this here because it seemed like a better place than intro
 % 7. Present ASL recognition as an example of a complex skill set to identify, as inconsistency and noise are more likely prevalent with human repetitions of actions than precise robotic replay.
 We see ASL production and recognition as a complex domain containing challenges representative of those faced in collaborative robotics. Additionally, ASL requires, at a minimum, a six-dimensional state space representation.  This provides sufficient complexity to prove that our skill representation can be used in environments where brute force and other na\"ive methods would be infeasible.  Furthermore, the noise associated with human performance of the ASL symbols is large enough to ensure that our recognition techniques rely on the overall trajectory of the training data, and not merely frame-by-frame matching of exact states over time.  Finally, the ASL gestures chosen overlap significantly, avoiding segmentation based on the region of the state space that a primitive action occupies. Although there are six dimensions of the state space in total, Figure \ref{fig:asl_sign_overlap} displays a representative sampling of the noticeable overlap along two of those dimensions.
 
 Gesture recognition for ASL symbols is not novel.  Our attempt here is not to recognize gestures with an extremely high degree of fidelity.  Although an interesting problem in its own right, several researchers have already made formidable contributions in this arena \cite{HandGestures,HSMMRecognition,POMDPGesture,HoughASL,ASLRealTime,MotionASL}.  We use our system to perform frame-by-frame classification indicating which gesture is likely being performed, while simultaneously improving the accuracy of an internal policy representing that respective gesture.
+
+\section{Results}
+\label{sec:result}
+To show the effectiveness and viability of RAPTOR, we tested its ability to classify a set of seven American Sign Language gestures: coat, drive, in, out, school, shoes, and store. Due to the inherent similarity of movement within our gestures and low fidelity of our input signals, the chosen gestures had significant overlap in six-dimensional space. In particular, the gestures for 'shoes', 'school', and 'in' are extremely similar after being converted into our six dimensional reference frame. In all cases we trained our agent using a single, expert-provided example of unaltered, Kinect-recorded data consisting of centroid coordinates (x,y,z) for each hand in a frame of reference centered on the location of the demonstrator's head. We presented our system with sequences of naturally captured, noised, and lossy data. 
+
+As expected, our algorithm performed without error when tested on its training data. As increasingly lengthy gesture compositions were provided, each observed gesture became increasingly robust to both noisy data and outliers. We generate noisy data by multiplying each value within the incoming state descriptor vector by a randomly selected value $r \in [1 - n/2, 1 + n/2]$, where $n$ designates the severity of the noise. We simulate lossy data by replacing large contiguous blocks of valid frames, approximately 10-30\% of total sensor input, with a single repeated stale input frame. This simulates the failure of the sensor being polled by RAPTOR. The algorithm's mechanism for estimating the proper connection of previously unseen states successfully accommodated for the noise and absent states in the test data. 
+
+The complex scenario shown in Figure \ref{fig:output_nowaypoints_repeatedtrials} and Figure \ref{fig:output_waypoints_repeatedtrials} included the placement of some of the most similar gestures in close temporal proximity. We introduced additional noisy data, composited randomly from familiar states in each of the seven gestures' training data, to demonstrate our algorithm's ability to discern when there is an unrecognized action taking place. The introduction of waypointing, shown in Figure \ref{fig:output_waypoints_repeatedtrials}, boosted overall confidence values for correct classifications and smoothed the transitions between non-confident and confident classifications. One particular example of this can be seen near frame 410, as without waypointing the gesture for 'school' is confused with the end of the 'shoes' gesture preceding it. 
 
 \begin{figure}[t]
 \begin{center}
@@ -240,14 +246,6 @@ Gesture recognition for ASL symbols is not novel.  Our attempt here is not to re
 \label{fig:output_waypoints_repeatedtrials}
 \end{center}
 \end{figure}
-
-\section{Results}
-\label{sec:result}
-To show the effectiveness and viability of RAPTOR, we tested its ability to classify a set of seven American Sign Language gestures: coat, drive, in, out, school, shoes, and store. Due to the inherent similarity of movement within our gestures and low fidelity of our input signals, the chosen gestures had significant overlap in six-dimensional space. In particular, the gestures for 'shoes', 'school', and 'in' are extremely similar after being converted into our six dimensional reference frame. In all cases we trained our agent using a single, expert-provided example of unaltered, Kinect-recorded data consisting of centroid coordinates (x,y,z) for each hand in a frame of reference centered on the location of the demonstrator's head. We presented our system with sequences of naturally captured data, noised data, and lossy data. 
-
-As expected, our algorithm performed without error when tested on its training data. As increasingly lengthy gesture compositions were provided, each observed gesture became increasingly robust to both noisy data and outliers. We generate noisy data by multiplying each value within the incoming state descriptor vector by a randomly selected value $r \in [1 - n/2, 1 + n/2]$, where $n$ designates the severity of the noise. We simulate lossy data by replacing large contiguous blocks of valid frames, approximately 10-30\% of total sensor input, with a single repeated stale input frame. This simulates the failure of the sensor being polled by RAPTOR. The algorithm's mechanism for estimating the proper connection of previously unseen states successfully accommodated for the noise and absent states in the test data. 
-
-The complex scenario shown in Figure \ref{fig:output_nowaypoints_repeatedtrials} and Figure \ref{fig:output_waypoints_repeatedtrials} included the placement of some of the most similar gestures in close temporal proximity. We introduced additional noisy data, composited randomly from familiar states in each of the seven gestures' training data, to demonstrate our algorithm's ability to discern when there is an unrecognized action taking place. The introduction of waypointing, shown in Figure \ref{fig:output_waypoints_repeatedtrials}, boosted overall confidence values for correct classifications and smoothed the transitions between non-confident and confident classifications. One particular example of this can be seen near frame 410, as without waypointing the gesture for 'school' is confused with the end of the 'shoes' gesture preceeding it. 
 
 The lack of classification of the final 'shoes' gesture is explained by the step in which after a high confidence classification is made, the window through which the algorithm searches for effective state space traversals, $P_{\mathrm{hit}}$, is cut in half to prevent harmful self-reinforcement looping.
 
