--- a/papers/IROS/styles/ieeeconf.cls
+++ b/papers/IROS/styles/ieeeconf.cls
@@ -661,7 +661,7 @@
 %
 %
 %
-\ProvidesClass{cssconf}[2004/1/15 revision V1.6b by Pradeep Misra]
+\ProvidesClass{ieeeconf}[2004/1/15 revision V1.6b by Pradeep Misra]
 %\ProvidesClass{IEEEtran}[2002/11/18 revision V1.6b by Michael Shell]
 %\typeout{-- See the "IEEEtran_HOWTO" manual for usage information.}
 %\typeout{-- The source comments contain changelog notes.}
@@ -4588,4 +4588,3 @@ which is provided to fool Hyperref.}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% End of IEEEtran.cls  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % That's all folks!
-
